--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script type = "text/javascript">
-            const ws = new WebSocket("ws://localhost:1234");
+            const ws = new WebSocket("wss://HOSTNAME");
 
             ws.addEventListener('message', function (event) {
                 let audio = new Audio('youve-got-mail-sound.mp3')
