--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
                         choices.innerHTML += '<div class="m-2 alert alert-primary fade show" role="alert">' + payload.choices[i].title + '</div>'
                     }
                     choices.innerHTML += '</div>'
+                    document.getElementById("container").appendChild(choices)
                     return
                 }
                 if (payload.type === 'poll_in_progress') {
@@ -55,6 +56,7 @@
                         choices.innerHTML += '<div class="m-2 alert alert-primary fade show" role="alert">' + payload.choices[i].title + ':' + payload.choices[i].votes + '</div>'
                     }
                     choices.innerHTML += '</div>'
+                    document.getElementById("container").appendChild(choices)
                     return
                 }
                 if (payload.type === 'poll_end') {
@@ -71,6 +73,7 @@
                         choices.innerHTML += '<div class="m-2 alert alert-primary fade show" role="alert">' + payload.choices[i].title + ':' + payload.choices[i].votes + '</div>'
                     }
                     choices.innerHTML += '</div>'
+                    document.getElementById("container").appendChild(choices)
                     return
                 }
             });
