--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script type = "text/javascript">
-            const ws = new WebSocket("wss://HOSTNAME/websockets");
+            const ws = new WebSocket("PROTOCOL://HOSTNAME/websockets");
+            const timeout = 9000
 
             ws.addEventListener('message', function (event) {
                 const payload = JSON.parse(event.data)
@@ -22,7 +23,7 @@
                     document.getElementById("container").appendChild(div)
                     setTimeout(function () {
                         $('.alert').alert('close')
-                    }, 5000);
+                    }, timeout);
                     return
                 }
                 if (payload.type === 'poll_begin') {
@@ -40,25 +41,29 @@
                     }
                     choices.innerHTML += '</div>'
                     document.getElementById("container").appendChild(choices)
+
+                    setTimeout(function () {
+                        $('.alert').alert('close')
+                    }, timeout);
                     return
                 }
-                if (payload.type === 'poll_in_progress') {
-                    let audio = new Audio('beep.wav')
-                    audio.play();
+                <!-- if (payload.type === 'poll_in_progress') { -->
+                <!--     let audio = new Audio('beep.wav') -->
+                <!--     audio.play(); -->
 
-                    let titlePoll = document.createElement('div')
-                    titlePoll.innerHTML = '<div class="d-flex justify-content-center"><div class="alert alert-primary fade show" role="alert">' + payload.title + '</div></div>'
-                    document.getElementById("container").appendChild(titlePoll)
+                <!--     let titlePoll = document.createElement('div') -->
+                <!--     titlePoll.innerHTML = '<div class="d-flex justify-content-center"><div class="alert alert-primary fade show" role="alert">' + payload.title + '</div></div>' -->
+                <!--     document.getElementById("container").appendChild(titlePoll) -->
 
-                    let choices = document.createElement('div')
-                    choices.innerHTML = '<div class="d-flex justify-content-center">'
-                    for (let i = 0; i < payload.choices.length; i++) {
-                        choices.innerHTML += '<div class="m-2 alert alert-primary fade show" role="alert">' + payload.choices[i].title + ':' + payload.choices[i].votes + '</div>'
-                    }
-                    choices.innerHTML += '</div>'
-                    document.getElementById("container").appendChild(choices)
-                    return
-                }
+                <!--     let choices = document.createElement('div') -->
+                <!--     choices.innerHTML = '<div class="d-flex justify-content-center">' -->
+                <!--     for (let i = 0; i < payload.choices.length; i++) { -->
+                <!--         choices.innerHTML += '<div class="m-2 alert alert-primary fade show" role="alert">' + payload.choices[i].title + ':' + payload.choices[i].votes + '</div>' -->
+                <!--     } -->
+                <!--     choices.innerHTML += '</div>' -->
+                <!--     document.getElementById("container").appendChild(choices) -->
+                <!--     return -->
+                <!-- } -->
                 if (payload.type === 'poll_end') {
                     let audio = new Audio('beep.wav')
                     audio.play();
@@ -74,6 +79,9 @@
                     }
                     choices.innerHTML += '</div>'
                     document.getElementById("container").appendChild(choices)
+                    setTimeout(function () {
+                        $('.alert').alert('close')
+                    }, timeout);
                     return
                 }
             });
