--- a/public/index.html
+++ b/public/index.html
@@ -5,110 +5,56 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script type = "text/javascript">
+            function sleep(ms) {
+                return new Promise(resolve => setTimeout(resolve, ms));
+            }
+
             const ws = new WebSocket("PROTOCOL://HOSTNAME/websockets");
             const timeout = 9000
 
-            ws.addEventListener('message', function (event) {
+            ws.addEventListener('message', async function (event) {
                 const payload = JSON.parse(event.data)
                 if (payload.type === "ping") {
                     return
                 }
+
                 document.getElementById("container").innerHTML = ''
 
-                if (payload.type === "message") {
-                    let audio = new Audio('youve-got-mail-sound.mp3')
-                    audio.play();
-                    let div = document.createElement('div')
-                    div.innerHTML = '<div class="alert alert-success fade show" role="alert">' + payload.message + '</div>'
-                    document.getElementById("container").appendChild(div)
-                    setTimeout(function () {
-                        $('.alert').alert('close')
-                    }, timeout);
-                    return
-                }
+                let audio = new Audio('beep.wav')
+                audio.play();
+
+                let titlePoll = document.createElement('div')
+                titlePoll.innerHTML = '<div id="alert" class="d-flex justify-content-center"><div class="alert alert-primary fade show" role="alert">' + payload.title + '</div></div>'
+                document.getElementById("container").appendChild(titlePoll)
+                let choices = document.createElement('div')
+                choices.innerHTML = '<div class="d-flex justify-content-center">'
                 if (payload.type === 'poll_begin') {
-                    let audio = new Audio('beep.wav')
-                    audio.play();
-
-                    let titlePoll = document.createElement('div')
-                    titlePoll.innerHTML = '<div class="d-flex justify-content-center"><div class="alert alert-primary fade show" role="alert">' + payload.title + '</div></div>'
-                    document.getElementById("container").appendChild(titlePoll)
-
-                    let choices = document.createElement('div')
-                    choices.innerHTML = '<div class="d-flex justify-content-center">'
                     for (let i = 0; i < payload.choices.length; i++) {
                         choices.innerHTML += '<div class="m-2 alert alert-primary fade show" role="alert">' + payload.choices[i].title + '</div>'
                     }
-                    choices.innerHTML += '</div>'
-                    document.getElementById("container").appendChild(choices)
-
-                    setTimeout(function () {
-                        $('.alert').alert('close')
-                    }, timeout);
-                    return
                 }
                 if (payload.type === 'poll_end') {
-                    let audio = new Audio('beep.wav')
-                    audio.play();
-
-                    let titlePoll = document.createElement('div')
-                    titlePoll.innerHTML = '<div class="d-flex justify-content-center"><div class="alert alert-primary fade show" role="alert">' + payload.title + '</div></div>'
-                    document.getElementById("container").appendChild(titlePoll)
-
-                    let choices = document.createElement('div')
-                    choices.innerHTML = '<div class="d-flex justify-content-center">'
                     for (let i = 0; i < payload.choices.length; i++) {
                         choices.innerHTML += '<div class="m-2 alert alert-primary fade show" role="alert">' + payload.choices[i].title + ':' + payload.choices[i].votes + '</div>'
                     }
-                    choices.innerHTML += '</div>'
-                    document.getElementById("container").appendChild(choices)
-                    setTimeout(function () {
-                        $('.alert').alert('close')
-                    }, timeout);
-                    return
                 }
                 if (payload.type === 'prediction_begin') {
-                    let audio = new Audio('beep.wav')
-                    audio.play();
-
-                    let titlePoll = document.createElement('div')
-                    titlePoll.innerHTML = '<div class="d-flex justify-content-center"><div class="alert alert-primary fade show" role="alert">' + payload.title + '</div></div>'
-                    document.getElementById("container").appendChild(titlePoll)
-
-                    let choices = document.createElement('div')
-                    choices.innerHTML = '<div class="d-flex justify-content-center">'
                     for (let i = 0; i < payload.choices.length; i++) {
                         choices.innerHTML += '<div class="m-2 alert alert-primary fade show" role="alert">' + payload.choices[i].title + '</div>'
                     }
-                    choices.innerHTML += '</div>'
-                    document.getElementById("container").appendChild(choices)
-
-                    setTimeout(function () {
-                        $('.alert').alert('close')
-                    }, timeout);
-                    return
                 }
                 if (payload.type === 'prediction_lock' || payload.type === 'prediction_end') {
-                    let audio = new Audio('beep.wav')
-                    audio.play();
-
-                    let titlePoll = document.createElement('div')
-                    titlePoll.innerHTML = '<div class="d-flex justify-content-center"><div class="alert alert-primary fade show" role="alert">' + payload.title + '</div></div>'
-                    document.getElementById("container").appendChild(titlePoll)
-
-                    let choices = document.createElement('div')
-                    choices.innerHTML = '<div class="d-flex justify-content-center">'
                     for (let i = 0; i < payload.choices.length; i++) {
                         choices.innerHTML += '<div class="m-2 alert alert-primary fade show" role="alert">' + payload.choices[i].title + ':' + payload.choices[i].votes + '</div>'
                     }
-                    choices.innerHTML += '</div>'
-                    document.getElementById("container").appendChild(choices)
-                    setTimeout(function () {
-                        $('.alert').alert('close')
-                    }, timeout);
-                    return
                 }
-            });
+                choices.innerHTML += '</div>'
+                document.getElementById("container").appendChild(choices)
+                await sleep(timeout)
+                titlePoll.innerHTML = ''
+                choices.innerHTML = ''
+                return
+            }, 1000);
         </script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
